breve descripcion de features

--- a/abogados.html
+++ b/abogados.html
@@ -212,9 +212,9 @@
         <div class="col-md-4">
           <div class="card feature-card h-100">
             <div class="card-body">
-              <h5 class="card-title">Diseño Profesional</h5>
+              <h5 class="card-title">Chatbot con IA</h5>
               <p class="card-text">
-                Breve descripción de la característica 1.
+                Un asistente inteligente que recibe a tus clientes, identifica sus problemas y recopila información clave para que puedas abordarlos con precisión.
               </p>
             </div>
           </div>
@@ -224,9 +224,9 @@
         <div class="col-md-4">
           <div class="card feature-card h-100">
             <div class="card-body">
-              <h5 class="card-title">Diseño de logo con IA</h5>
+              <h5 class="card-title">Botones y mensajes para WhatsApp</h5>
               <p class="card-text">
-                Breve descripción de la característica 2.
+                Facilita el contacto directo con tus clientes a través de WhatsApp, con botones personalizados y mensajes predefinidos que mejoran la comunicación y aceleran el cierre de ventas.
               </p>
             </div>
           </div>
@@ -236,45 +236,9 @@
         <div class="col-md-4">
           <div class="card feature-card h-100">
             <div class="card-body">
-              <h5 class="card-title">Botones y Mensajes para WhatsApp</h5>
+              <h5 class="card-title">Diseño profesional</h5>
               <p class="card-text">
-                Breve descripción de la característica 3.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Tarjeta 3 -->
-        <div class="col-md-4">
-          <div class="card feature-card h-100">
-            <div class="card-body">
-              <h5 class="card-title">Obtimización SEO</h5>
-              <p class="card-text">
-                Breve descripción de la característica 3.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Tarjeta 3 -->
-        <div class="col-md-4">
-          <div class="card feature-card h-100">
-            <div class="card-body">
-              <h5 class="card-title">Campañas publicitarias</h5>
-              <p class="card-text">
-                Breve descripción de la característica 3.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Tarjeta 3 -->
-        <div class="col-md-4">
-          <div class="card feature-card h-100">
-            <div class="card-body">
-              <h5 class="card-title">Chatbot con IA</h5>
-              <p class="card-text">
-                Breve descripción de la característica 3.
+                Una landing page atractiva y moderna, diseñada para captar la atención y convertir visitantes en clientes, con un enfoque en la usabilidad y la experiencia del usuario.
               </p>
             </div>
           </div>
@@ -286,7 +250,7 @@
             <div class="card-body">
               <h5 class="card-title">Lead Magnet</h5>
               <p class="card-text">
-                Breve descripción de la característica 3.
+                Ofrece valor adicional a tus visitantes mediante recursos como ebooks, cupones de descuento o guías exclusivas, incentivando el registro y fortaleciendo tu relación con ellos.
               </p>
             </div>
           </div>
@@ -296,20 +260,101 @@
         <div class="col-md-4">
           <div class="card feature-card h-100">
             <div class="card-body">
-              <h5 class="card-title">Anuncios para redes sociales</h5>
+              <h5 class="card-title">Optimización SEO</h5>
               <p class="card-text">
-                Breve descripción de la característica 3.
+                Aumenta la visibilidad de tu landing page en buscadores como Google.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Tarjeta 3 -->
+        <div class="col-md-4">
+          <div class="card feature-card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Campañas publicitarias</h5>
+              <p class="card-text">
+                Diseño y gestión de campañas publicitarias en plataformas como Meta o Google Ads, dirigidas a atraer más clientes potenciales hacia tu landing page.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Tarjeta 3 -->
+        <div class="col-md-4">
+          <div class="card feature-card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Diseño de logo con IA</h5>
+              <p class="card-text">
+                Obtén un logotipo único y personalizado mediante inteligencia artificial, alineado con la identidad de tu marca para destacar en tu sector.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Tarjeta 3 -->
+        <div class="col-md-4">
+          <div class="card feature-card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Anuncios</h5>
+              <p class="card-text">
+                Crea anuncios visuales impactantes con herramientas profesionales como Canva, diseñados para captar la atención de tu audiencia en redes sociales o plataformas publicitarias.
               </p>
             </div>
           </div>
         </div>
 
       </div>
-
-
     </div>
     </div>
   </section>
+
+
+  <!-- Sección About Me -->
+<section class="about-me-section py-5">
+  <div class="container">
+    <div class="row justify-content-center">
+      <!-- El contenedor con estilo de hoja -->
+      <div class="col-md-10 col-lg-8 paper-container p-4">
+        <div class="row align-items-center">
+          
+          <!-- Columna de la foto profesional -->
+          <div class="col-md-4 text-center mb-3 mb-md-0">
+            <!-- Ajusta la ruta de tu foto y las clases para el estilo deseado -->
+            <img
+              src="foto-profesional.jpg"
+              alt="Foto profesional"
+              class="img-fluid rounded-circle foto-about-me"
+            />
+          </div>
+
+          <!-- Columna del texto -->
+          <div class="col-md-8">
+            <h2 class="mb-3">¿Quién <span>soy?</span></h2>
+            <p>
+              Aquí puedes añadir una breve descripción personal o profesional,
+              destacando tu experiencia y tu perfil.
+            </p>
+
+            <h3 class="mt-4">¿Nuestro propósito?</h3>
+            <p>
+              Describe aquí el propósito de tu proyecto o negocio, cómo ayudas
+              a tus clientes o cuál es tu misión principal en el área legal o
+              cualquier otro sector.
+            </p>
+            <p>
+              En este segundo párrafo, puedes continuar explicando por qué
+              haces lo que haces, cuál es tu visión a futuro y de qué manera
+              impactas positivamente en la vida de quienes te rodean.
+            </p>
+          </div>
+          
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 
 
