--- a/abogados.html
+++ b/abogados.html
@@ -322,9 +322,9 @@
           <div class="col-md-4 text-center mb-3 mb-md-0">
             <!-- Ajusta la ruta de tu foto y las clases para el estilo deseado -->
             <img
-              src="foto-profesional.jpg"
+              src="/assets/images/neto web.webp"
               alt="Foto profesional"
-              class="img-fluid rounded-circle foto-about-me"
+              class="img-fluid  foto-about-me"
             />
           </div>
 
@@ -332,20 +332,15 @@
           <div class="col-md-8">
             <h2 class="mb-3">¿Quién <span>soy?</span></h2>
             <p>
-              Aquí puedes añadir una breve descripción personal o profesional,
-              destacando tu experiencia y tu perfil.
+              Soy Desarrollador Web con más de 5 años de experiencia creando sitios web profesionales que destacan por su diseño, funcionalidad y enfoque en resultados.
             </p>
 
-            <h3 class="mt-4">¿Nuestro propósito?</h3>
-            <p>
-              Describe aquí el propósito de tu proyecto o negocio, cómo ayudas
-              a tus clientes o cuál es tu misión principal en el área legal o
-              cualquier otro sector.
+            <h3 class="mt-5">¿Mi propósito?</h3>
+            <p class="mt-5">
+              Mi propósito es transformar la manera en que los profesionistas, como los abogados, conectan con sus clientes en el entorno digital.
             </p>
             <p>
-              En este segundo párrafo, puedes continuar explicando por qué
-              haces lo que haces, cuál es tu visión a futuro y de qué manera
-              impactas positivamente en la vida de quienes te rodean.
+              Mi objetivo es digitalizar la publicidad tradicional, combinando diseño profesional y estrategias efectivas para impulsar su presencia en línea y ayudarlos a destacar en un mercado competitivo.
             </p>
           </div>
           
