--- a/abogados.html
+++ b/abogados.html
@@ -272,33 +272,9 @@
         <div class="col-md-4">
           <div class="card feature-card h-100">
             <div class="card-body">
-              <h5 class="card-title">Campañas publicitarias</h5>
-              <p class="card-text">
-                Diseño y gestión de campañas publicitarias en plataformas como Meta o Google Ads, dirigidas a atraer más clientes potenciales hacia tu landing page.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Tarjeta 3 -->
-        <div class="col-md-4">
-          <div class="card feature-card h-100">
-            <div class="card-body">
               <h5 class="card-title">Diseño de logo con IA</h5>
               <p class="card-text">
                 Obtén un logotipo único y personalizado mediante inteligencia artificial, alineado con la identidad de tu marca para destacar en tu sector.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Tarjeta 3 -->
-        <div class="col-md-4">
-          <div class="card feature-card h-100">
-            <div class="card-body">
-              <h5 class="card-title">Anuncios</h5>
-              <p class="card-text">
-                Crea anuncios visuales impactantes con herramientas profesionales como Canva, diseñados para captar la atención de tu audiencia en redes sociales o plataformas publicitarias.
               </p>
             </div>
           </div>
@@ -349,6 +325,62 @@
     </div>
   </div>
 </section>
+
+<!-- Sección "Para quién es una Landing Page?" -->
+<section class="lp-target-section py-5">
+  <div class="container">
+    <!-- Fila principal: texto izquierda / imagen derecha -->
+    <div class="row align-items-center mb-5">
+      <!-- Columna texto -->
+      <div class="col-md-6">
+        <h3 class="mb-3">¿Para quién es una <span>Landing Page</span>?</h3>
+        <p>
+          Breve descripción sobre quiénes pueden beneficiarse de una landing page.
+          Explica por qué es relevante para ese público específico.
+        </p>
+      </div>
+      <!-- Columna imagen -->
+      <div class="col-md-6 text-center">
+        <!-- Ajusta la ruta de tu imagen -->
+        <img 
+          src="/assets/images/falta-tiempo.png" 
+          alt="Imagen descriptiva"
+          class="img-fluid"
+        />
+      </div>
+    </div>
+
+
+    <div class="row g-4">
+      <!-- Tarjeta 1 -->
+      <div class="col-md-6">
+        <div class="card h-100 side-border-card">
+          <div class="card-body">
+            <h5 class="card-title">Tarjeta 1</h5>
+            <p class="card-text">
+              Descripción de la primera tarjeta.
+            </p>
+          </div>
+        </div>
+      </div>
+    
+      <!-- Tarjeta 2 -->
+      <div class="col-md-6">
+        <div class="card h-100 side-border-card">
+          <div class="card-body">
+            <h5 class="card-title">Tarjeta 2</h5>
+            <p class="card-text">
+              Descripción de la segunda tarjeta.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <!-- Fin de la fila de tarjetas -->
+  </div>
+</section>
+
 
 
 
