estilos para quien es

--- a/abogados.html
+++ b/abogados.html
@@ -356,7 +356,7 @@
       <div class="col-md-6">
         <div class="card h-100 side-border-card">
           <div class="card-body">
-            <h5 class="card-title">Tarjeta 1</h5>
+            <h5 class="card-title">Para <span>Abogados Independientes</span></h5>
             <p class="card-text">
               Descripción de la primera tarjeta.
             </p>
@@ -368,7 +368,7 @@
       <div class="col-md-6">
         <div class="card h-100 side-border-card">
           <div class="card-body">
-            <h5 class="card-title">Tarjeta 2</h5>
+            <h5 class="card-title">Para <span>Despachos de Abogados</span></h5>
             <p class="card-text">
               Descripción de la segunda tarjeta.
             </p>
