terminano para quien es

--- a/abogados.html
+++ b/abogados.html
@@ -335,8 +335,7 @@
       <div class="col-md-6">
         <h3 class="mb-3">¿Para quién es una <span>Landing Page</span>?</h3>
         <p>
-          Breve descripción sobre quiénes pueden beneficiarse de una landing page.
-          Explica por qué es relevante para ese público específico.
+          Es para profesionales que quieren vender sus servicios por internet de una forma sencilla.
         </p>
       </div>
       <!-- Columna imagen -->
@@ -358,7 +357,7 @@
           <div class="card-body">
             <h5 class="card-title">Para <span>Abogados Independientes</span></h5>
             <p class="card-text">
-              Descripción de la primera tarjeta.
+              Si eres un abogado independiente y quieres dar un salto de calidad en tus servicios, esta es tu oportunidad. A través de WhatsApp podrás crear tu propio proceso de agendar citas. 
             </p>
           </div>
         </div>
@@ -370,7 +369,7 @@
           <div class="card-body">
             <h5 class="card-title">Para <span>Despachos de Abogados</span></h5>
             <p class="card-text">
-              Descripción de la segunda tarjeta.
+              Si perteneces a un despacho de abogados éxitoso, esta landing page les ayudara a consolidar su credibilidad y obtener los clientes que estan buscando. Además podras crear tu estrategía de venta a golpe de clic.
             </p>
           </div>
         </div>
