--- a/abogados.html
+++ b/abogados.html
@@ -388,14 +388,14 @@
     <div class="container">
       <div class="row align-items-center">
         <!-- Columna con título, párrafo y lista -->
-        <div class="col-md-6 mb-4 mb-md-0 text-center text-md-start">
+        <div class="col-md-6 mb-4 mb-md-0 text-start text-md-start">
           <h2 class="mb-3">
             Apúntate ahora y <span>empieza hoy mismo</span>
           </h2>
-          <p class="mb-4 text-start">
+          <p class="mb-4 ">
             Todo lo que necesita un abogado en un mismo lugar:
           </p>
-          <ul class="list-unstyled text-start">
+          <ul class="list-unstyled ">
             <li>
               <i class="bi bi-check-circle-fill text-success me-2"></i>
               Característica 1
