cta section termianda

--- a/abogados.html
+++ b/abogados.html
@@ -310,17 +310,15 @@
               <h2 class="mb-3">¿Quién <span>soy?</span></h2>
               <p>
                 Soy Desarrollador Web con más de 5 años de experiencia creando sitios web profesionales que destacan por
-                su diseño, funcionalidad y enfoque en resultados.
+                su diseño, funcionalidad y enfoque en resultados y en 2 años ya hemos ayudado a más de 150 negocios a alcanzar sus objetivos.
               </p>
 
               <h3 class="mt-5">¿Mi propósito?</h3>
               <p class="mt-5">
-                Mi propósito es transformar la manera en que los profesionistas, como los abogados, conectan con sus
-                clientes en el entorno digital.
+                Ayudar a todos esas personas que tienen problemas a la hora de vender sus servicios profesionales por internet a que consigan hacerlo de la forma más sencilla posible.
               </p>
               <p>
-                Mi objetivo es digitalizar la publicidad tradicional, combinando diseño profesional y estrategias
-                efectivas para impulsar su presencia en línea y ayudarlos a destacar en un mercado competitivo.
+                Mi filosofia es hacer un marketing digital accesible para todo el mundo sin la necesidad de tener conocimientos avanzados.
               </p>
             </div>
 
@@ -398,19 +396,19 @@
           <ul class="list-unstyled ">
             <li>
               <i class="bi bi-check-circle-fill text-success me-2"></i>
-              Característica 1
+              Anuncios
             </li>
             <li>
               <i class="bi bi-check-circle-fill text-success me-2"></i>
-              Característica 2
+              Landing Page
             </li>
             <li>
               <i class="bi bi-check-circle-fill text-success me-2"></i>
-              Característica 3
+              Lead Magnet
             </li>
             <li>
               <i class="bi bi-check-circle-fill text-success me-2"></i>
-              Característica 4
+              Chatbot con Inteligencia Artificial
             </li>
           </ul>
         </div>
