bonus section terminada

--- a/abogados.html
+++ b/abogados.html
@@ -337,7 +337,7 @@
         <div class="col-md-6">
           <h3 class="mb-3">¿Para quién es una <span>Landing Page</span>?</h3>
           <p>
-            Es para profesionales que quieren vender sus servicios por internet de una forma sencilla.
+            Es para profesionales que quieren vender sus servicios juridicos por internet de una forma sencilla.
           </p>
         </div>
         <!-- Columna imagen -->
@@ -424,6 +424,36 @@
       </div>
     </div>
   </section>
+
+<!-- Sección Bonus -->
+<section class="bonus-section py-5">
+  <div class="container">
+    <h2 class="text-center mb-5">
+      Nuestro <span>Bonus</span> Extra
+    </h2>
+
+    <div class="row justify-content-center">
+      <div class="col-md-6 col-lg-5">
+        <div class="card bonus-card">
+          <!-- Imagen de la card -->
+          <img 
+            src="/assets/images/falta-tiempo.png" 
+            alt="Imagen Bonus" 
+            class="card-img-top"
+          />
+
+          <div class="card-body">
+            <h5 class="card-title mb-3">Curso de <span>Meta Ads</span></h5>
+            <p class="card-text mb-4">
+              Crea tus propias campañas en Meta de manera profesional sin depender de terceros.
+            </p>
+            <span class="price-tag" style="width: 100%; text-align: center;">Valor $900 <hr>Ahora Gratis</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
