--- a/abogados.html
+++ b/abogados.html
@@ -456,6 +456,104 @@
 </section>
 
 
+<!-- Sección Testimonios -->
+<section class="testimonials-section py-5">
+  <div class="container text-white">
+    <h2 class="text-center mb-3">
+      ¿Qué dicen de <span>nosotros</span>?
+    </h2>
+    <p class="text-center mb-5">
+      Ya hemos ayudado a más de 150 negocios
+    </p>
+
+    <!-- Contenedor para scroll horizontal -->
+    <div class="testimonials-row d-flex flex-nowrap overflow-auto gap-3">
+      <!-- Tarjeta 1 -->
+      <div class="card testimonial-card">
+        <div class="card-body">
+          <div class="d-flex align-items-center mb-3">
+            <img
+              src="/assets/images/testimonio 1.jpg"
+              alt="Foto Testimonio 1"
+              class="rounded-circle"
+              width="50"
+              height="50"
+            />
+            <div class="ms-3">
+              <!-- 5 estrellas doradas -->
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+            </div>
+          </div>
+          <p class="card-text">
+            “Excelente servicio, me ayudaron a conseguir más clientes de lo que
+            esperaba. ¡Muy recomendable!”
+          </p>
+          <h6 class="fw-bold mb-0">Juan Pérez</h6>
+        </div>
+      </div>
+
+      <!-- Tarjeta 2 -->
+      <div class="card testimonial-card">
+        <div class="card-body">
+          <div class="d-flex align-items-center mb-3">
+            <img
+              src="/assets/images/testimonio 2.jpg"
+              alt="Foto Testimonio 2"
+              class="rounded-circle"
+              width="50"
+              height="50"
+            />
+            <div class="ms-3">
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+            </div>
+          </div>
+          <p class="card-text">
+            “Mi despacho creció notablemente gracias a sus estrategias de marketing.”
+          </p>
+          <h6 class="fw-bold mb-0">María Rodríguez</h6>
+        </div>
+      </div>
+
+      <!-- Tarjeta 3 -->
+      <div class="card testimonial-card">
+        <div class="card-body">
+          <div class="d-flex align-items-center mb-3">
+            <img
+              src="/assets/images/testimonio 3.jpg"
+              alt="Foto Testimonio 3"
+              class="rounded-circle"
+              width="50"
+              height="50"
+            />
+            <div class="ms-3">
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+              <i class="bi bi-star-fill text-warning"></i>
+            </div>
+          </div>
+          <p class="card-text">
+            “Lo mejor de todo es que no tuve que ser un experto en Marketing Digital;
+            ellos se encargaron de todo.”
+          </p>
+          <h6 class="fw-bold mb-0">Carlos López</h6>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
 
 
 
