quitando comillas de testimonios

--- a/abogados.html
+++ b/abogados.html
@@ -489,8 +489,8 @@
             </div>
           </div>
           <p class="card-text">
-            “Excelente servicio, me ayudaron a conseguir más clientes de lo que
-            esperaba. ¡Muy recomendable!”
+            Excelente servicio, me ayudaron a conseguir más clientes de lo que
+            esperaba. ¡Muy recomendable!
           </p>
           <h6 class="fw-bold mb-0">Juan Pérez</h6>
         </div>
@@ -516,7 +516,7 @@
             </div>
           </div>
           <p class="card-text">
-            “Mi despacho creció notablemente gracias a sus estrategias de marketing.”
+            Mi despacho creció notablemente gracias a sus estrategias de marketing.
           </p>
           <h6 class="fw-bold mb-0">María Rodríguez</h6>
         </div>
@@ -542,8 +542,8 @@
             </div>
           </div>
           <p class="card-text">
-            “Lo mejor de todo es que no tuve que ser un experto en Marketing Digital;
-            ellos se encargaron de todo.”
+            Lo mejor de todo es que no tuve que ser un experto en Marketing Digital;
+            ellos se encargaron de todo.
           </p>
           <h6 class="fw-bold mb-0">Carlos López</h6>
         </div>
