section steacli terminada

--- a/abogados.html
+++ b/abogados.html
@@ -552,6 +552,71 @@
   </div>
 </section>
 
+<!-- Sección Stacking / Resumen -->
+<section class="stacking-section py-5">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        
+        <!-- Card con borde negro -->
+        <div class="card border-dark text-center p-4">
+          <h2 class="mb-3"> <span>Resumen</span></h2>
+          <p class="mb-4">Todo lo que incluye tu Landing Page</p>
+
+          <!-- Lista con palomitas -->
+          <ul class="list-unstyled text-start mb-4">
+            <li class="mb-2">
+              <i class="bi bi-check-circle-fill text-success me-2"></i>
+              Landing Page Profesional
+            </li>
+            <li class="mb-2">
+              <i class="bi bi-check-circle-fill text-success me-2"></i>
+              Chatbot con Inteligencia Artificial
+            </li>
+            <li class="mb-2">
+              <i class="bi bi-check-circle-fill text-success me-2"></i>
+              Botones a Whatsapp
+            </li>
+            <li class="mb-2">
+              <i class="bi bi-check-circle-fill text-success me-2"></i>
+              Lead Magnet
+            </li>
+            <li class="mb-2">
+              <i class="bi bi-check-circle-fill text-success me-2"></i>
+              Optimización SEO
+            </li>
+            <li class="mb-2">
+              <i class="bi bi-check-circle-fill text-success me-2"></i>
+              Nuestro Bonus
+            </li>
+          </ul>
+
+          <!-- Precio -->
+          <p class="price mb-4">
+            Todo tiene un valor de 
+            <span class="price-old">5000 pesos</span><br>
+            Solo hasta final de mes por 
+            <span >1999 pesos</span>
+          </p>
+
+          <!-- Línea divisoria -->
+          <hr class="light-green-hr">
+
+          <!-- Botón de información -->
+          <div class="text-center">
+            <a href="https://api.whatsapp.com/send?phone=TU_NUMERO" class="btn btn-lg btn-whatsapp px-4 py-2">
+              <i class="bi bi-whatsapp me-2"></i>
+              Quiero más información
+            </a>
+          </div>
+        </div>
+        <!-- Fin de la card -->
+      </div>
+    </div>
+  </div>
+</section>
+
+
 
 
 
