section garantia terminada

--- a/abogados.html
+++ b/abogados.html
@@ -616,6 +616,29 @@
   </div>
 </section>
 
+<!-- Sección Garantía -->
+<section class="guarantee-section py-5 text-center">
+  <div class="container">
+    <!-- Imagen de la garantía (galardón) -->
+    <img 
+      src="/assets/images/GARANTIA 14 DIAS.png" 
+      alt="Imagen de Garantía"
+      class="img-fluid guarantee-image mb-4"
+    />
+
+    <!-- Título con span resaltado -->
+    <h2 class="mb-3">
+      Garantía de <span>14 días</span> de devolución del dinero
+    </h2>
+
+    <!-- Párrafo explicativo -->
+    <p>
+      Queremos transmitirte toda la confianza y seguridad cuando tomes esta
+      decisión, por lo que si tu Landing Page no es lo que esperabas te
+      devolvemos el 100% de tu dinero del importe pagado.
+    </p>
+  </div>
+</section>
 
 
 
