section garantia padding top y bottom

--- a/abogados.html
+++ b/abogados.html
@@ -617,7 +617,7 @@
 </section>
 
 <!-- Sección Garantía -->
-<section class="guarantee-section py-5 text-center">
+<section class="guarantee-section text-center">
   <div class="container">
     <!-- Imagen de la garantía (galardón) -->
     <img 
