--- a/abogados.html
+++ b/abogados.html
@@ -310,15 +310,18 @@
               <h2 class="mb-3">¿Quién <span>soy?</span></h2>
               <p>
                 Soy Desarrollador Web con más de 5 años de experiencia creando sitios web profesionales que destacan por
-                su diseño, funcionalidad y enfoque en resultados y en 2 años ya hemos ayudado a más de 150 negocios a alcanzar sus objetivos.
+                su diseño, funcionalidad y enfoque en resultados y en 2 años ya hemos ayudado a más de 150 negocios a
+                alcanzar sus objetivos.
               </p>
 
               <h3 class="mt-5">¿Mi propósito?</h3>
               <p class="mt-5">
-                Ayudar a todos esas personas que tienen problemas a la hora de vender sus servicios profesionales por internet a que consigan hacerlo de la forma más sencilla posible.
+                Ayudar a todos esas personas que tienen problemas a la hora de vender sus servicios profesionales por
+                internet a que consigan hacerlo de la forma más sencilla posible.
               </p>
               <p>
-                Mi filosofia es hacer un marketing digital accesible para todo el mundo sin la necesidad de tener conocimientos avanzados.
+                Mi filosofia es hacer un marketing digital accesible para todo el mundo sin la necesidad de tener
+                conocimientos avanzados.
               </p>
             </div>
 
@@ -425,220 +428,283 @@
     </div>
   </section>
 
-<!-- Sección Bonus -->
-<section class="bonus-section py-5">
-  <div class="container">
-    <h2 class="text-center mb-5">
-      Nuestro <span>Bonus</span> Extra
-    </h2>
+  <!-- Sección Bonus -->
+  <section class="bonus-section py-5">
+    <div class="container">
+      <h2 class="text-center mb-5">
+        Nuestro <span>Bonus</span> Extra
+      </h2>
 
-    <div class="row justify-content-center">
-      <div class="col-md-6 col-lg-5">
-        <div class="card bonus-card">
-          <!-- Imagen de la card -->
-          <img 
-            src="/assets/images/falta-tiempo.png" 
-            alt="Imagen Bonus" 
-            class="card-img-top"
-          />
+      <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-5">
+          <div class="card bonus-card">
+            <!-- Imagen de la card -->
+            <img src="/assets/images/falta-tiempo.png" alt="Imagen Bonus" class="card-img-top" />
 
+            <div class="card-body">
+              <h5 class="card-title mb-3">Curso de <span>Meta Ads</span></h5>
+              <p class="card-text mb-4">
+                Crea tus propias campañas en Meta de manera profesional sin depender de terceros.
+              </p>
+              <span class="price-tag" style="width: 100%; text-align: center;">Valor $900
+                <hr>Ahora Gratis
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Sección Testimonios -->
+  <section class="testimonials-section py-5">
+    <div class="container text-white">
+      <h2 class="text-center mb-3">
+        ¿Qué dicen de <span>nosotros</span>?
+      </h2>
+      <p class="text-center mb-5">
+        Ya hemos ayudado a más de 150 negocios
+      </p>
+
+      <!-- Contenedor para scroll horizontal -->
+      <div class="testimonials-row d-flex flex-nowrap overflow-auto gap-3">
+        <!-- Tarjeta 1 -->
+        <div class="card testimonial-card">
           <div class="card-body">
-            <h5 class="card-title mb-3">Curso de <span>Meta Ads</span></h5>
-            <p class="card-text mb-4">
-              Crea tus propias campañas en Meta de manera profesional sin depender de terceros.
+            <div class="d-flex align-items-center mb-3">
+              <img src="/assets/images/testimonio 1.jpg" alt="Foto Testimonio 1" class="rounded-circle" width="50"
+                height="50" />
+              <div class="ms-3">
+                <!-- 5 estrellas doradas -->
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+              </div>
+            </div>
+            <p class="card-text">
+              Excelente servicio, me ayudaron a conseguir más clientes de lo que
+              esperaba. ¡Muy recomendable!
             </p>
-            <span class="price-tag" style="width: 100%; text-align: center;">Valor $900 <hr>Ahora Gratis</span>
+            <h6 class="fw-bold mb-0">Juan Pérez</h6>
+          </div>
+        </div>
+
+        <!-- Tarjeta 2 -->
+        <div class="card testimonial-card">
+          <div class="card-body">
+            <div class="d-flex align-items-center mb-3">
+              <img src="/assets/images/testimonio 2.jpg" alt="Foto Testimonio 2" class="rounded-circle" width="50"
+                height="50" />
+              <div class="ms-3">
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+              </div>
+            </div>
+            <p class="card-text">
+              Mi despacho creció notablemente gracias a sus estrategias de marketing.
+            </p>
+            <h6 class="fw-bold mb-0">María Rodríguez</h6>
+          </div>
+        </div>
+
+        <!-- Tarjeta 3 -->
+        <div class="card testimonial-card">
+          <div class="card-body">
+            <div class="d-flex align-items-center mb-3">
+              <img src="/assets/images/testimonio 3.jpg" alt="Foto Testimonio 3" class="rounded-circle" width="50"
+                height="50" />
+              <div class="ms-3">
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+                <i class="bi bi-star-fill text-warning"></i>
+              </div>
+            </div>
+            <p class="card-text">
+              Lo mejor de todo es que no tuve que ser un experto en Marketing Digital;
+              ellos se encargaron de todo.
+            </p>
+            <h6 class="fw-bold mb-0">Carlos López</h6>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
+  <!-- Sección Stacking / Resumen -->
+  <section class="stacking-section py-5">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-6">
 
-<!-- Sección Testimonios -->
-<section class="testimonials-section py-5">
-  <div class="container text-white">
-    <h2 class="text-center mb-3">
-      ¿Qué dicen de <span>nosotros</span>?
-    </h2>
-    <p class="text-center mb-5">
-      Ya hemos ayudado a más de 150 negocios
-    </p>
+          <!-- Card con borde negro -->
+          <div class="card border-dark text-center p-4">
+            <h2 class="mb-3"> <span>Resumen</span></h2>
+            <p class="mb-4">Todo lo que incluye tu Landing Page</p>
 
-    <!-- Contenedor para scroll horizontal -->
-    <div class="testimonials-row d-flex flex-nowrap overflow-auto gap-3">
-      <!-- Tarjeta 1 -->
-      <div class="card testimonial-card">
-        <div class="card-body">
-          <div class="d-flex align-items-center mb-3">
-            <img
-              src="/assets/images/testimonio 1.jpg"
-              alt="Foto Testimonio 1"
-              class="rounded-circle"
-              width="50"
-              height="50"
-            />
-            <div class="ms-3">
-              <!-- 5 estrellas doradas -->
-              <i class="bi bi-star-fill text-warning"></i>
-              <i class="bi bi-star-fill text-warning"></i>
-              <i class="bi bi-star-fill text-warning"></i>
-              <i class="bi bi-star-fill text-warning"></i>
-              <i class="bi bi-star-fill text-warning"></i>
+            <!-- Lista con palomitas -->
+            <ul class="list-unstyled text-start mb-4">
+              <li class="mb-2">
+                <i class="bi bi-check-circle-fill text-success me-2"></i>
+                Landing Page Profesional
+              </li>
+              <li class="mb-2">
+                <i class="bi bi-check-circle-fill text-success me-2"></i>
+                Chatbot con Inteligencia Artificial
+              </li>
+              <li class="mb-2">
+                <i class="bi bi-check-circle-fill text-success me-2"></i>
+                Botones a Whatsapp
+              </li>
+              <li class="mb-2">
+                <i class="bi bi-check-circle-fill text-success me-2"></i>
+                Lead Magnet
+              </li>
+              <li class="mb-2">
+                <i class="bi bi-check-circle-fill text-success me-2"></i>
+                Optimización SEO
+              </li>
+              <li class="mb-2">
+                <i class="bi bi-check-circle-fill text-success me-2"></i>
+                Nuestro Bonus
+              </li>
+            </ul>
+
+            <!-- Precio -->
+            <p class="price mb-4">
+              Todo tiene un valor de
+              <span class="price-old">5000 pesos</span><br>
+              Solo hasta final de mes por
+              <span>1999 pesos</span>
+            </p>
+
+            <!-- Línea divisoria -->
+            <hr class="light-green-hr">
+
+            <!-- Botón de información -->
+            <div class="text-center">
+              <a href="https://api.whatsapp.com/send?phone=TU_NUMERO" class="btn btn-lg btn-whatsapp px-4 py-2">
+                <i class="bi bi-whatsapp me-2"></i>
+                Quiero más información
+              </a>
             </div>
           </div>
-          <p class="card-text">
-            Excelente servicio, me ayudaron a conseguir más clientes de lo que
-            esperaba. ¡Muy recomendable!
-          </p>
-          <h6 class="fw-bold mb-0">Juan Pérez</h6>
-        </div>
-      </div>
-
-      <!-- Tarjeta 2 -->
-      <div class="card testimonial-card">
-        <div class="card-body">
-          <div class="d-flex align-items-center mb-3">
-            <img
-              src="/assets/images/testimonio 2.jpg"
-              alt="Foto Testimonio 2"
-              class="rounded-circle"
-              width="50"
-              height="50"
-            />
-            <div class="ms-3">
-              <i class="bi bi-star-fill text-warning"></i>
-              <i class="bi bi-star-fill text-warning"></i>
-              <i class="bi bi-star-fill text-warning"></i>
-              <i class="bi bi-star-fill text-warning"></i>
-              <i class="bi bi-star-fill text-warning"></i>
-            </div>
-          </div>
-          <p class="card-text">
-            Mi despacho creció notablemente gracias a sus estrategias de marketing.
-          </p>
-          <h6 class="fw-bold mb-0">María Rodríguez</h6>
-        </div>
-      </div>
-
-      <!-- Tarjeta 3 -->
-      <div class="card testimonial-card">
-        <div class="card-body">
-          <div class="d-flex align-items-center mb-3">
-            <img
-              src="/assets/images/testimonio 3.jpg"
-              alt="Foto Testimonio 3"
-              class="rounded-circle"
-              width="50"
-              height="50"
-            />
-            <div class="ms-3">
-              <i class="bi bi-star-fill text-warning"></i>
-              <i class="bi bi-star-fill text-warning"></i>
-              <i class="bi bi-star-fill text-warning"></i>
-              <i class="bi bi-star-fill text-warning"></i>
-              <i class="bi bi-star-fill text-warning"></i>
-            </div>
-          </div>
-          <p class="card-text">
-            Lo mejor de todo es que no tuve que ser un experto en Marketing Digital;
-            ellos se encargaron de todo.
-          </p>
-          <h6 class="fw-bold mb-0">Carlos López</h6>
+          <!-- Fin de la card -->
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- Sección Stacking / Resumen -->
-<section class="stacking-section py-5">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        
-        <!-- Card con borde negro -->
-        <div class="card border-dark text-center p-4">
-          <h2 class="mb-3"> <span>Resumen</span></h2>
-          <p class="mb-4">Todo lo que incluye tu Landing Page</p>
+  <!-- Sección Garantía -->
+  <section class="guarantee-section text-center">
+    <div class="container">
+      <!-- Imagen de la garantía (galardón) -->
+      <img src="/assets/images/GARANTIA 14 DIAS.png" alt="Imagen de Garantía" class="img-fluid guarantee-image mb-4" />
 
-          <!-- Lista con palomitas -->
-          <ul class="list-unstyled text-start mb-4">
-            <li class="mb-2">
-              <i class="bi bi-check-circle-fill text-success me-2"></i>
-              Landing Page Profesional
-            </li>
-            <li class="mb-2">
-              <i class="bi bi-check-circle-fill text-success me-2"></i>
-              Chatbot con Inteligencia Artificial
-            </li>
-            <li class="mb-2">
-              <i class="bi bi-check-circle-fill text-success me-2"></i>
-              Botones a Whatsapp
-            </li>
-            <li class="mb-2">
-              <i class="bi bi-check-circle-fill text-success me-2"></i>
-              Lead Magnet
-            </li>
-            <li class="mb-2">
-              <i class="bi bi-check-circle-fill text-success me-2"></i>
-              Optimización SEO
-            </li>
-            <li class="mb-2">
-              <i class="bi bi-check-circle-fill text-success me-2"></i>
-              Nuestro Bonus
-            </li>
-          </ul>
+      <!-- Título con span resaltado -->
+      <h2 class="mb-3">
+        Garantía de <span>14 días</span> de devolución del dinero
+      </h2>
 
-          <!-- Precio -->
-          <p class="price mb-4">
-            Todo tiene un valor de 
-            <span class="price-old">5000 pesos</span><br>
-            Solo hasta final de mes por 
-            <span >1999 pesos</span>
-          </p>
+      <!-- Párrafo explicativo -->
+      <p>
+        Queremos transmitirte toda la confianza y seguridad cuando tomes esta
+        decisión, por lo que si tu Landing Page no es lo que esperabas te
+        devolvemos el 100% de tu dinero del importe pagado.
+      </p>
+    </div>
+  </section>
 
-          <!-- Línea divisoria -->
-          <hr class="light-green-hr">
+  <!-- Sección Preguntas Frecuentes -->
+  <section class="faq-section py-5">
+    <div class="container">
+      <h2 class="mb-4 text-center">
+        <span>Preguntas</span> frecuentes
+      </h2>
+      <p class="text-center mb-5">
+        Si tienes alguna pregunta especial estamos en WhatsApp
+      </p>
 
-          <!-- Botón de información -->
-          <div class="text-center">
-            <a href="https://api.whatsapp.com/send?phone=TU_NUMERO" class="btn btn-lg btn-whatsapp px-4 py-2">
-              <i class="bi bi-whatsapp me-2"></i>
-              Quiero más información
-            </a>
+      <!-- Accordion de Bootstrap -->
+      <div class="accordion" id="faqAccordion">
+        <!-- Pregunta 1 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="faqOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+              aria-expanded="true" aria-controls="collapseOne">
+              ¿Cómo se implementa la Landing Page?
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="faqOne"
+            data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              Te entregamos todos los archivos y configuraciones necesarias para que tu Landing Page quede lista en tu
+              hosting, o te orientamos paso a paso en el proceso.
+            </div>
           </div>
         </div>
-        <!-- Fin de la card -->
+
+        <!-- Pregunta 2 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="faqTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              ¿Necesito tener conocimientos de Marketing?
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="faqTwo"
+            data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              No es necesario. Nosotros nos encargamos de la parte técnica y te damos recomendaciones para optimizar tu
+              embudo de ventas.
+            </div>
+          </div>
+        </div>
+
+        <!-- Pregunta 3 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="faqThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              ¿Cuánto tiempo tarda en estar lista la Landing Page?
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="faqThree"
+            data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              Normalmente en un plazo de 3 a 5 días hábiles, dependiendo de la complejidad y revisiones finales.
+            </div>
+          </div>
+        </div>
+
+        <!-- Pregunta 4 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="faqFour">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+              ¿Qué pasa si no estoy satisfecho con el resultado?
+            </button>
+          </h2>
+          <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="faqFour"
+            data-bs-parent="#faqAccordion">
+            <div class="accordion-body">
+              Contamos con una garantía de satisfacción. Si algo no cumple tus expectativas, trabajaremos contigo para
+              solucionarlo o te devolvemos tu dinero.
+            </div>
+          </div>
+        </div>
       </div>
+      <!-- Fin del Accordion -->
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- Sección Garantía -->
-<section class="guarantee-section text-center">
-  <div class="container">
-    <!-- Imagen de la garantía (galardón) -->
-    <img 
-      src="/assets/images/GARANTIA 14 DIAS.png" 
-      alt="Imagen de Garantía"
-      class="img-fluid guarantee-image mb-4"
-    />
-
-    <!-- Título con span resaltado -->
-    <h2 class="mb-3">
-      Garantía de <span>14 días</span> de devolución del dinero
-    </h2>
-
-    <!-- Párrafo explicativo -->
-    <p>
-      Queremos transmitirte toda la confianza y seguridad cuando tomes esta
-      decisión, por lo que si tu Landing Page no es lo que esperabas te
-      devolvemos el 100% de tu dinero del importe pagado.
-    </p>
-  </div>
-</section>
 
 
 
