section CTA 2 terminada

--- a/abogados.html
+++ b/abogados.html
@@ -706,10 +706,49 @@
   </section>
 
 
+  <!-- Sección Call-to-Action -->
+  <section class="cta-section py-5">
+    <div class="container">
+      <div class="row align-items-center">
+        <!-- Columna con título, párrafo y lista -->
+        <div class="col-md-6 mb-4 mb-md-0 text-start text-md-start">
+          <h2 class="mb-3">
+            Apúntate ahora y <span>empieza hoy mismo</span>
+          </h2>
+          <p class="mb-4 ">
+            Todo lo que necesita un abogado en un mismo lugar:
+          </p>
+          <ul class="list-unstyled ">
+            <li>
+              <i class="bi bi-check-circle-fill text-success me-2"></i>
+              Anuncios
+            </li>
+            <li>
+              <i class="bi bi-check-circle-fill text-success me-2"></i>
+              Landing Page
+            </li>
+            <li>
+              <i class="bi bi-check-circle-fill text-success me-2"></i>
+              Lead Magnet
+            </li>
+            <li>
+              <i class="bi bi-check-circle-fill text-success me-2"></i>
+              Chatbot con Inteligencia Artificial
+            </li>
+          </ul>
+        </div>
 
-
-
-
+        <!-- Columna con el botón de WhatsApp -->
+        <div class="col-md-4 text-center text-md-end">
+          <!-- Ajusta el enlace a tu número de WhatsApp -->
+          <a href="https://api.whatsapp.com/send?phone=TU_NUMERO" class="btn btn-lg btn-whatsapp px-4 py-2">
+            <i class="bi bi-whatsapp me-2"></i>
+            Quiero más información
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
   <!-- Scripts de Bootstrap (JS) -->
