--- a/abogados.html
+++ b/abogados.html
@@ -750,6 +750,56 @@
     </div>
   </section>
 
+  <!-- Sección Contador -->
+<section class="counter-section py-5">
+  <div class="container text-center">
+
+    <!-- Título -->
+    <h2 class="mb-3">
+      <span>Tenemos</span> una sorpresa más
+    </h2>
+
+    <!-- Descripción 1 -->
+    <p class="mb-2">
+      Los 20 primeros interesados obtendrán un descuento del 40%
+    </p>
+    <!-- Descripción 2 -->
+    <p class="mb-4">
+      Aprovecha esta <b>oferta</b> antes de que acabe el tiempo 
+      (solo hasta el final del mes)
+    </p>
+
+    <!-- Contenedor del contador -->
+    <div id="countdown" class="countdown-timer d-flex justify-content-center align-items-center flex-wrap">
+      <!-- DÍAS -->
+      <div class="time-segment me-3 mb-3">
+        <span id="days" class="time-value">0</span>
+        <p class="time-label">DÍAS</p>
+      </div>
+      <!-- HORAS -->
+      <div class="time-segment me-3 mb-3">
+        <span id="hours" class="time-value">0</span>
+        <p class="time-label">HORAS</p>
+      </div>
+      <!-- MINUTOS -->
+      <div class="time-segment me-3 mb-3">
+        <span id="minutes" class="time-value">0</span>
+        <p class="time-label">MIN</p>
+      </div>
+      <!-- SEGUNDOS -->
+      <div class="time-segment mb-3">
+        <span id="seconds" class="time-value">0</span>
+        <p class="time-label">SEG</p>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<!-- Script para el contador (AJUSTA LA FECHA A TU NECESIDAD) -->
+<script src="/assets/js/contador.js"></script>
+
+
 
   <!-- Scripts de Bootstrap (JS) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
