--- a/abogados.html
+++ b/abogados.html
@@ -796,6 +796,42 @@
   </div>
 </section>
 
+
+<!-- Footer -->
+<footer class="footer-section bg-dark text-white py-4">
+  <div class="container">
+    <div class="row align-items-center">
+      <!-- Sección de enlaces legales -->
+      <div class="col-md-6 mb-3 mb-md-0">
+        <ul class="list-inline mb-0">
+          <li class="list-inline-item me-3">
+            <a href="#privacidad" class="footer-link">Política de Privacidad</a>
+          </li>
+          <li class="list-inline-item me-3">
+            <a href="#cookies" class="footer-link">Cookies</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#aviso-legal" class="footer-link">Aviso Legal</a>
+          </li>
+        </ul>
+      </div>
+
+      <!-- Sección de Copywriting -->
+      <div class="col-md-6 text-md-end">
+        <small class="d-block">
+          &copy; <span id="year"></span> Neto Web. Todos los derechos reservados.
+        </small>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<!-- Script opcional para año automático -->
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
+
+
 <!-- Script para el contador (AJUSTA LA FECHA A TU NECESIDAD) -->
 <script src="/assets/js/contador.js"></script>
 
